sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:8: error: not found: value longueur
  for(i<- 1  to longueur){
                ^