sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var longeur=getNombreValeurs()
  var i=0
  var test1=0
  var test2=0
  var maxpos=0
  for(i<- 1  to longueur){
    test1=getValeur(i)
    test2=getValeur(i+1)
    if (test1>test2){
      echange(test1,test2)
      maxpos=i+1
    }
  }
}